fixed various bugs and quirks found by FindBugs plugin, mainly unnecessary object creation, unclosed readers, static inner classes and StringBuilders